total 추가 및 색깔 변경

--- a/src/components/NationItem.css
+++ b/src/components/NationItem.css
@@ -18,6 +18,10 @@ tr button:hover {
   color: #ffb703;
 }
 
+tr .total {
+  /* color: #e76f51; */
+  color: #fb5607;
+}
 /* .gold {
   color: #f5ff6d;
 }
